<resources>
    <string name="app_name">Reciclo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="recicl">Reciclô!</string>
    <string name="stock">Stock</string>
    <string name="recycle">Recycle</string>
    <string name="favorites">Favorites</string>
    <string name="recipe_extra_key">recipe_extra</string>
    <string name="LIST_MODE_KEY">LIST_MODE_KEY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_not_registered">Not Registered?\nCreate Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?\nLogin</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="login_state">login_state</string>
    <string name="login_state_signed_in">signed_in</string>
    <string name="login_state_signed_out">signed_out</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_exists">This user already exists</string>
    <string name="stars">" stars"</string>
    <string name="all_recipes">All</string>
    <string name="need_more_items">Need more items</string>
    <string name="item_available">Ready to be Made!</string>

    <string name="facebook_app_id">1296182820413191</string>
    <string name="item_tutorial">Item Tutorial</string>
    <string name="item_name">Item Name</string>
    <string name="wilder_pereira">Wilder Pereira</string>
    <string name="recycled">* Recycled</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="estoque">Estoque</string>
    <string name="sobre">Sobre</string>
    <string name="remover_ads">Remover Ads</string>
    <string name="sair">Sair</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="create_an_account">Create an Account</string>

    <!-- Java codes -->
    <string name="AllRecipesFragment">AllRecipesFragment</string>
    <string name="recipes">Recipes</string>
    <string name="FavoritesFragment">FavoritesFragment</string>
    <string name="ListFragment">ListFragment</string>
    <string name="onDataChange">onDataChange</string>
    <string name="canbemade"> canbemade: </string>
    <string name="onCancelled">onCancelled</string>
    <string name="recycling_nature">recycling recycle nature diy</string>
    <string name="ad_code">d5830609fcd442d2b9aad32b1e51b3e7</string>
    <string name="stocks">stocks/</string>
    <string name="itens">/itens</string>
    <string name="signed_in">onAuthStateChanged:signed_in:</string>
    <string name="signed_out">onAuthStateChanged:signed_out</string>
    <string name="users">users</string>
    <string name="name">name</string>
    <string name="stock_lowercase">stock</string>
    <string name="signinemail_oncomplete">signInWithEmail:onComplete:</string>


</resources>
